# pysymptotic

./: LICENSE  Makefile  pyproject.toml  requirements.in  requirements.txt
src/pysymptotic/: __init__.py  __main__.py  _tmp.py  cli.py  complexity.py  pysymptotic.py
tests/: __init__.py  test_cli.py  test_pysymptotic.py
